--- a/lambdas/generateFakeEnergyPricing/package.json
+++ b/lambdas/generateFakeEnergyPricing/package.json
@@ -5,7 +5,7 @@
   "main": "handler.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon handler.js"
+    "dev": "node -e 'require(\"./src/handler.js\").generateFakeEnergyData()'"
   },
   "keywords": [],
   "author": "",
