Add babel and dependencies to target NodeJS v12 Lambda runtime target Add rimraf for cross platform "rm -rf" like functionality

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,13 @@
 **/*/node_modules
 node_modules/
 
-# Build folder
+# build folder
 build
 
 # editor files
 *.swp
 .editorconfig
+
+**/*/dist/
+**/function.zip
+**/.DS_Store
