--- a/lambdas/generateFakeCustomerUsage/package.json
+++ b/lambdas/generateFakeCustomerUsage/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node -e 'require(\"./src/handler.js\").generateFakeCustomerData()'",
-    "clean": "rimraf dist function.zip",
-    "build": "babel src package.json package-lock.json --out-dir dist --copy-files && cross-env NODE_ENV=production npm install --prefix dist && zip -rXFS9 function.zip dist"
+    "clean": "rimraf dist generateFakeCustomerUsage.zip",
+    "build": "babel src package.json package-lock.json --out-dir dist --copy-files && cross-env NODE_ENV=production npm install --prefix dist && zip -rXFS9 generateFakeCustomerUsage.zip dist",
+    "push": "aws s3 cp generateFakeCustomerUsage.zip s3://cae-test1-deployment-artifacts-eu-west-1"
   },
   "keywords": [],
   "author": "",
