Script Lambda build, package, s3 upload process Script main deploy script to perform mono install on initial proj npm install Added CFn template definition for Energy Data Lambda Cleaned up some unecessary console.logs

--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "mono": "mono",
-    "build": "mono exec 'npm run build'",
-    "predeploy": "mkdir -p build && aws cloudformation package  --template-file ./src/cae-test1.cf.json --output-template build/cae-test1.yaml --s3-bucket cae-test1-deployment-artifacts",
-    "deploy": "aws cloudformation deploy --stack-name cae-test1 --template-file ./build/cae-test1.yaml --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND CAPABILITY_NAMED_IAM"
+    "install": "npm run mono bootstrap",
+    "build:lambda": "mono exec 'npm run build'",
+    "s3upload:lambda": "mono exec 'npm run s3upload'",
+    "cfn:pkg": "mkdir -p build && aws cloudformation package  --template-file ./src/cae-test1.cf.json --output-template build/cae-test1.yaml --s3-bucket cae-test1-deployment-artifacts",
+    "cfn:deploy": "aws cloudformation deploy --stack-name cae-test1 --template-file ./build/cae-test1.yaml --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND CAPABILITY_NAMED_IAM",
+    "deploy": "npm run build:lambda && npm run s3upload:lambda && npm run cfn:pkg && npm run cfn:deploy"
   },
   "repository": {
     "type": "git",
