--- a/lambdas/generateFakeCustomerUsage/package.json
+++ b/lambdas/generateFakeCustomerUsage/package.json
@@ -5,22 +5,25 @@
   "main": "handler.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node -e 'require(\"./src/handler.js\").generateFakeCustomerData()'",
-    "clean": "rimraf dist generateFakeCustomerUsage.zip",
-    "build": "babel src package.json package-lock.json --out-dir dist --copy-files && cross-env NODE_ENV=production npm install --prefix dist && zip -rXFS9 generateFakeCustomerUsage.zip dist",
-    "push": "aws s3 cp generateFakeCustomerUsage.zip s3://cae-test1-deployment-artifacts-eu-west-1"
+    "start": "node -e 'require(\"./src/handler.js\").generateFakeCustomerData()'",
+    "clean": "rimraf dist *.zip",
+    "copy": "babel src package.json package-lock.json --out-dir dist --copy-files",
+    "prod": "cross-env NODE_ENV=production npm install --prefix dist",
+    "zip": "zip -rXFS9 generateFakeCustomerUsage-v4.zip dist",
+    "build": "npm run clean && npm run copy && npm run prod && npm run zip",
+    "s3upload": "aws s3 cp generateFakeCustomerUsage-v4.zip s3://cae-test1-deployment-artifacts-eu-west-1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
+    "@babel/cli": "^7.10.4",
+    "@babel/core": "^7.10.3",
     "@babel/plugin-transform-runtime": "^7.11.5",
     "@babel/preset-env": "^7.11.5",
-    "aws-sdk": "^2.755.0",
+    "@babel/register": "^7.11.5",
+    "aws-sdk": "^2.720.0",
     "cross-env": "^7.0.2",
-    "nodemon": "^2.0.4",
     "rimraf": "^3.0.2"
   },
   "dependencies": {
