--- a/lambdas/generateFakeEnergyPricing/package.json
+++ b/lambdas/generateFakeEnergyPricing/package.json
@@ -1,23 +1,30 @@
 {
-  "name": "generateFakeEnergyPricing",
+  "name": "generatefakeenergypricing",
   "version": "1.0.0",
-  "description": "",
   "main": "handler.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node -e 'require(\"./src/handler.js\").generateFakeEnergyData()'",
-    "clean": "rimraf dist generateFakeCustomerUsage.zip",
-    "build": "babel src package.json package-lock.json --out-dir dist --copy-files && cross-env NODE_ENV=production npm install --prefix dist && zip -rXFS9 generateFakeCustomerUsage.zip dist",
-    "push": "aws s3 cp generateFakeCustomerUsage.zip s3://cae-test1-deployment-artifacts-eu-west-1"
+    "start": "node -e 'require(\"./src/handler.js\").generateFakeEnergyData()'",
+    "clean": "rimraf dist *.zip",
+    "copy": "babel src package.json package-lock.json --out-dir dist --copy-files",
+    "prod": "cross-env NODE_ENV=production npm install --prefix dist",
+    "zip": "zip -rXFS9 generateFakeEnergyPricing.zip dist",
+    "build": "npm run clean && npm run copy && npm run prod && npm run zip",
+    "s3upload": "aws s3 cp generateFakeEnergyPricing.zip s3://cae-test1-deployment-artifacts-eu-west-1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "@babel/cli": "^7.11.6",
+    "@babel/core": "^7.11.6",
+    "aws-sdk": "^2.755.0",
+    "cross-env": "^7.0.2",
+    "nodemon": "^2.0.4",
+    "rimraf": "^3.0.2"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "^7.11.2",
-    "aws-sdk": "^2.755.0"
-  }
+    "@babel/runtime-corejs3": "^7.11.2"
+  },
+  "description": ""
 }
