--- a/lambdas/dynamoDbStreamHandler/package.json
+++ b/lambdas/dynamoDbStreamHandler/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "generatefakecustomerusage",
+  "name": "dynamodbstreamhandler",
   "version": "1.0.0",
   "description": "",
   "main": "handler.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node -e 'require(\"./src/handler.js\").generateFakeCustomerData()'",
+    "start": "node -e 'require(\"./src/handler.js\").rollUpCustomerUsageData()'",
     "clean": "rimraf dist *.zip",
     "copy": "babel src package.json package-lock.json --out-dir dist --copy-files",
     "prod": "cross-env NODE_ENV=production npm install --prefix dist",
-    "zip": "zip -rXFS9 generateFakeCustomerUsage-v6.zip dist",
+    "zip": "zip -rXFS9 dynamoDbStreamHandler-v1.zip dist",
     "build": "npm run clean && npm run copy && npm run prod && npm run zip",
-    "s3upload": "aws s3 cp generateFakeCustomerUsage-v6.zip s3://cae-test1-deployment-artifacts-eu-west-1"
+    "s3upload": "aws s3 cp dynamoDbStreamHandler-v1.zip s3://cae-test1-deployment-artifacts-eu-west-1"
   },
   "keywords": [],
   "author": "",
