--- a/lambdas/dynamoDbStreamHandler/package.json
+++ b/lambdas/dynamoDbStreamHandler/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "handler.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node -e 'require(\"./src/handler.js\").rollUpCustomerUsageData()'",
+    "start": "node -e 'require(\"./src/handler.js\").test()'",
+    "test": "npm run start",
     "clean": "rimraf dist *.zip",
     "copy": "babel src package.json package-lock.json --out-dir dist --copy-files",
     "prod": "cross-env NODE_ENV=production npm install --prefix dist",
-    "zip": "zip -rXFS9 dynamoDbStreamHandler-v1.zip dist",
-    "build": "npm run clean && npm run copy && npm run prod && npm run zip",
-    "s3upload": "aws s3 cp dynamoDbStreamHandler-v1.zip s3://cae-test1-deployment-artifacts-eu-west-1"
+    "zip": "zip -rXFS9 dynamoDbStreamHandler-v5.zip dist",
+    "build": "npm run test && npm run clean && npm run copy && npm run prod && npm run zip",
+    "s3upload": "aws s3 cp dynamoDbStreamHandler-v5.zip s3://cae-test1-deployment-artifacts-eu-west-1"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +24,7 @@
     "@babel/register": "^7.11.5",
     "aws-sdk": "^2.720.0",
     "cross-env": "^7.0.2",
+    "nodemon": "^2.0.4",
     "rimraf": "^3.0.2"
   },
   "dependencies": {
