--- a/lambdas/generateFakeEnergyPricing/package.json
+++ b/lambdas/generateFakeEnergyPricing/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "main": "handler.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node -e 'require(\"./src/handler.js\").generateFakeEnergyData()'",
+    "test": "npm run start",
     "clean": "rimraf dist *.zip",
     "copy": "babel src package.json package-lock.json --out-dir dist --copy-files",
     "prod": "cross-env NODE_ENV=production npm install --prefix dist",
-    "zip": "zip -rXFS9 generateFakeEnergyPricing-v1.zip dist",
-    "build": "npm run clean && npm run copy && npm run prod && npm run zip",
-    "s3upload": "aws s3 cp generateFakeEnergyPricing-v1.zip s3://cae-test1-deployment-artifacts-eu-west-1"
+    "zip": "zip -rXFS9 generateFakeEnergyPricing-v3.zip dist",
+    "build": "npm run test && npm run clean && npm run copy && npm run prod && npm run zip",
+    "s3upload": "aws s3 cp generateFakeEnergyPricing-v3.zip s3://cae-test1-deployment-artifacts-eu-west-1"
   },
   "keywords": [],
   "author": "",
