--- a/lambdas/dynamoDbStreamHandler/package.json
+++ b/lambdas/dynamoDbStreamHandler/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "handler.js",
   "scripts": {
-    "start": "node -e 'require(\"./src/handler.js\").test()'",
+    "start": "node -e 'require(\"./test/test.js\").test()'",
     "test": "npm run start",
     "clean": "rimraf dist *.zip",
     "copy": "babel src package.json package-lock.json --out-dir dist --copy-files",
     "prod": "cross-env NODE_ENV=production npm install --prefix dist",
-    "zip": "zip -rXFS9 dynamoDbStreamHandler-v5.zip dist",
+    "zip": "zip -rXFS9 dynamoDbStreamHandler-v6.zip dist",
     "build": "npm run test && npm run clean && npm run copy && npm run prod && npm run zip",
-    "s3upload": "aws s3 cp dynamoDbStreamHandler-v5.zip s3://cae-test1-deployment-artifacts-eu-west-1"
+    "s3upload": "aws s3 cp dynamoDbStreamHandler-v6.zip s3://cae-test1-deployment-artifacts-eu-west-1"
   },
   "keywords": [],
   "author": "",
