Scale customer data to 1000 records per interval Added new customer bill API Lambda with associated role Increased DynamoDB stream batch size to 1000

--- a/lambdas/customerBillApi/package.json
+++ b/lambdas/customerBillApi/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "generatefakecustomerusage",
+  "name": "customerbillapi",
   "version": "1.0.0",
   "description": "",
   "main": "handler.js",
   "scripts": {
-    "start": "node -e 'require(\"./src/handler.js\").generateFakeCustomerData()'",
+    "start": "node -e 'require(\"./src/handler.js\").queryCustomerBill({body:\"{}\"},null, (a,b) => {console.log(b);})'",
     "test": "npm run start",
     "clean": "rimraf dist *.zip",
     "copy": "babel src package.json package-lock.json --out-dir dist --copy-files",
     "prod": "cross-env NODE_ENV=production npm install --prefix dist",
-    "zip": "zip -rXFS9 generateFakeCustomerUsage-v8.zip dist",
-    "build": "npm run test && npm run clean && npm run copy && npm run prod && npm run zip",
-    "s3upload": "aws s3 cp generateFakeCustomerUsage-v8.zip s3://cae-test1-deployment-artifacts-eu-west-1"
+    "zip": "zip -rXFS9 customerBillApi-v3.zip dist",
+    "build": "npm run clean && npm run copy && npm run prod && npm run zip",
+    "s3upload": "aws s3 cp customerBillApi-v3.zip s3://cae-test1-deployment-artifacts-eu-west-1"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +24,7 @@
     "@babel/register": "^7.11.5",
     "aws-sdk": "^2.720.0",
     "cross-env": "^7.0.2",
+    "nodemon": "^2.0.4",
     "rimraf": "^3.0.2"
   },
   "dependencies": {
