--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "s3upload:lambda": "mono exec 'npm run s3upload'",
     "cfn:pkg": "mkdir -p build && aws cloudformation package  --template-file ./src/cae-test1.cf.json --output-template build/cae-test1.yaml --s3-bucket cae-test1-deployment-artifacts",
     "cfn:dep": "aws cloudformation deploy --stack-name cae-test1 --template-file ./build/cae-test1.yaml --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND CAPABILITY_NAMED_IAM",
-    "cfn:out": "aws cloudformation describe-stacks --stack-name cae-test1 --query \"Stacks[0].Outputs[]\" --output yaml",
-    "cfn:pkg:dep": "npm run cfn:pkg && npm run cfn:dep",
+    "cfn:out": "aws cloudformation describe-stacks --stack-name cae-test1",
+    "cfn:pkg:dep": "npm run cfn:pkg && npm run cfn:dep && npm run cfn:out",
     "deploy": "npm run build:lambda && npm run s3upload:lambda && npm run cfn:pkg:dep"
   },
   "repository": {
