--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "install": "npm run mono bootstrap",
     "build:lambda": "mono exec 'npm run build'",
     "s3upload:lambda": "mono exec 'npm run s3upload'",
+    "lambda:genCust": "echo GenerateFakeCustomerUsageLambdaS3Key\\=$(npm run binary --prefix ./lambdas/generateFakeCustomerUsage)",
+    "lambda:genEnerg": "echo GenerateEnergyDataLambdaS3Key\\=$npm run binary --prefix ./lambdas/generateFakeEnergyPricing)",
+    "lambda:custBill": "echo QueryCustomerBillLambdaS3Key\\=$npm run binary --prefix ./lambdas/customerBillApi)",
+    "lambda:ddbStreams": "echo DynamoDbStreamHandlerLambdaS3Key\\=$npm run binary --prefix ./lambdas/dynamoDbStreamHandler)",
+    "cfn:param-overrides": "npm run lambda:genCust",
     "cfn:pkg": "mkdir -p build && aws cloudformation package  --template-file ./src/cae-test1.cf.json --output-template build/cae-test1.yaml --s3-bucket cae-test1-deployment-artifacts",
-    "cfn:dep": "aws cloudformation deploy --stack-name cae-test1 --template-file ./build/cae-test1.yaml --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND CAPABILITY_NAMED_IAM",
+    "cfn:dep": "aws cloudformation deploy --stack-name cae-test1 --parameter-overrides $(npm run --silent cfn:param-overrides) --template-file ./build/cae-test1.yaml --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND CAPABILITY_NAMED_IAM",
     "cfn:out": "aws cloudformation describe-stacks --stack-name cae-test1",
     "cfn:pkg:dep": "npm run cfn:pkg && npm run cfn:dep && npm run cfn:out",
     "deploy": "npm run build:lambda && npm run s3upload:lambda && npm run cfn:pkg:dep"
