--- a/lambdas/generateFakeCustomerUsage/package.json
+++ b/lambdas/generateFakeCustomerUsage/package.json
@@ -1,10 +1,10 @@
 {
   "name": "generatefakecustomerusage",
   "version": "1.0.6",
-  "description": "",
+  "description": "Generate fake customer usage data and write it to DynamoDB",
   "main": "handler.js",
   "scripts": {
-    "start": "node -e 'require(\"./src/handler.js\").generateFakeCustomerData(true)'",
+    "start": "node -e 'require(\"./src/handler.js\").generateFakeCustomerData()'",
     "test": "npm run start",
     "clean": "rimraf dist *.zip",
     "copy": "babel src package.json package-lock.json --out-dir dist --copy-files",
