--- a/lambdas/customerBillApi/package.json
+++ b/lambdas/customerBillApi/package.json
@@ -1,19 +1,19 @@
 {
   "name": "customerbillapi",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.3",
+  "description": "Receives customer bill get requests and responds with DynamoDB query results",
   "main": "handler.js",
   "scripts": {
-    "start": "node -e 'require(\"./src/handler.js\").queryCustomerBill({body:\"{}\"},null, (a,b) => {console.log(b);})'",
+    "start": "node -e 'require(\"./test/test.js\").test()'",
     "test": "npm run start",
     "clean": "rimraf dist *.zip",
     "copy": "babel src package.json package-lock.json --out-dir dist --copy-files",
     "prod": "cross-env NODE_ENV=production npm install --prefix dist",
-    "zip": "zip -rXFS9 customerBillApi-v5.zip dist",
-    "build": "npm run clean && npm run copy && npm run prod && npm run zip",
-    "s3upload:lambda" : "aws s3 cp customerBillApi-v5.zip s3://cae-test1-deployment-artifacts-eu-west-1",
-    "s3upload:apispec" : "aws s3 cp src/openapi/customerBillApi-v1.json s3://cae-test1-deployment-artifacts-eu-west-1",
-    "s3upload": "npm run s3upload:lambda && npm run s3upload:apispec"
+    "ver": "node -p 'require(\"./package.json\").version'",
+    "binary": "echo customerBillApi-v$(npm run --silent ver).zip",
+    "zip": "zip -rXFS9 $(npm run --silent binary) dist",
+    "build": "npm run test && npm run clean && npm run copy && npm run prod && npm version patch && npm run zip",
+    "s3upload": "aws s3 cp $(npm run --silent binary) s3://cae-test1-deployment-artifacts-eu-west-1"
   },
   "keywords": [],
   "author": "",
