Added TESTING mode flag to all tests Added bucket name env var from --s3bucket flag to npm Removed S3 bucket for artifacts repo as part of stack to bucket name passed as param Added explanation for --s3bucket args to README.md

--- a/lambdas/generateFakeEnergyPricing/package.json
+++ b/lambdas/generateFakeEnergyPricing/package.json
@@ -1,10 +1,10 @@
 {
   "name": "generatefakeenergypricing",
-  "version": "1.0.2",
+  "version": "1.0.6",
   "description": "Generate fake energy pricing data and write it to DynamoDB",
   "main": "handler.js",
   "scripts": {
-    "start": "node -e 'require(\"./src/handler.js\").generateFakeEnergyData()'",
+    "start": "cross-env TESTING=true node -e 'require(\"./src/handler.js\").generateFakeEnergyData()'",
     "test": "npm run start",
     "clean": "rimraf dist *.zip",
     "copy": "babel src package.json package-lock.json --out-dir dist --copy-files",
@@ -13,7 +13,7 @@
     "binary": "echo generateFakeEnergyPricing-v$(npm run --silent ver).zip",
     "zip": "zip -rXFS9 $(npm run --silent binary) dist",
     "build": "npm run test && npm run clean && npm run copy && npm run prod && npm version patch && npm run zip",
-    "s3upload": "aws s3 cp $(npm run --silent binary) s3://cae-test1-deployment-artifacts-eu-west-1"
+    "s3upload": "aws s3 cp $(npm run --silent binary) s3://\"$npm_config_s3bucket\""
   },
   "keywords": [],
   "author": "",
