--- a/lambdas/generateFakeCustomerUsage/package.json
+++ b/lambdas/generateFakeCustomerUsage/package.json
@@ -1,10 +1,10 @@
 {
   "name": "generatefakecustomerusage",
-  "version": "1.0.7",
+  "version": "1.0.11",
   "description": "Generate fake customer usage data and write it to DynamoDB",
   "main": "handler.js",
   "scripts": {
-    "start": "node -e 'require(\"./src/handler.js\").generateFakeCustomerData()'",
+    "start": "cross-env TESTING=true node -e 'require(\"./src/handler.js\").generateFakeCustomerData()'",
     "test": "npm run start",
     "clean": "rimraf dist *.zip",
     "copy": "babel src package.json package-lock.json --out-dir dist --copy-files",
@@ -13,7 +13,7 @@
     "binary": "echo generateFakeCustomerUsage-v$(npm run --silent ver).zip",
     "zip": "zip -rXFS9 $(npm run --silent binary) dist",
     "build": "npm run test && npm run clean && npm run copy && npm run prod && npm version patch && npm run zip",
-    "s3upload": "aws s3 cp $(npm run --silent binary) s3://cae-test1-deployment-artifacts-eu-west-1"
+    "s3upload": "aws s3 cp $(npm run --silent binary) s3://\"$npm_config_s3bucket\""
   },
   "keywords": [],
   "author": "",
