--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "mono": "mono",
     "install": "npm run mono bootstrap",
     "build:lambda": "mono exec 'npm run build'",
-    "s3upload:lambda": "mono exec 'npm run s3upload'",
+    "s3upload:lambda": "mono exec 'npm run --silent s3upload'",
     "lambda:genCust": "echo GenerateFakeCustomerUsageLambdaS3Key\\=$(npm run binary --prefix ./lambdas/generateFakeCustomerUsage)",
     "lambda:genEnerg": "echo GenerateEnergyDataLambdaS3Key\\=$(npm run binary --prefix ./lambdas/generateFakeEnergyPricing)",
     "lambda:custBill": "echo QueryCustomerBillLambdaS3Key\\=$(npm run binary --prefix ./lambdas/customerBillApi)",
     "lambda:ddbStreams": "echo DynamoDbStreamHandlerLambdaS3Key\\=$(npm run binary --prefix ./lambdas/dynamoDbStreamHandler)",
-    "cfn:param-overrides": "echo \"$(npm run --silent lambda:genCust) $(npm run --silent lambda:genEnerg) $(npm run --silent lambda:custBill) $(npm run --silent lambda:ddbStreams)\"",
+    "s3bucket:artifacts": "echo ArtifactsS3BucketName\\=$npm_config_s3bucket",
+    "cfn:param-overrides": "echo \"$(npm run --silent lambda:genCust) $(npm run --silent lambda:genEnerg) $(npm run --silent lambda:custBill) $(npm run --silent lambda:ddbStreams) $(npm run --silent s3bucket:artifacts)\"",
     "cfn:pkg": "mkdir -p build && aws cloudformation package  --template-file ./src/cae-test1.cf.json --output-template build/cae-test1.yaml --s3-bucket cae-test1-deployment-artifacts",
     "cfn:dep": "aws cloudformation deploy --stack-name cae-test1 --parameter-overrides $(npm run --silent cfn:param-overrides) --template-file ./build/cae-test1.yaml --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND CAPABILITY_NAMED_IAM",
     "cfn:out": "aws cloudformation describe-stacks --stack-name cae-test1",
@@ -32,6 +33,7 @@
   },
   "homepage": "https://github.com/enpoweredveteran/cae-test1#readme",
   "devDependencies": {
+    "cross-env": "^7.0.2",
     "monomono": "^0.2.2"
   }
 }
