--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "lambda:genEnerg": "echo GenerateEnergyDataLambdaS3Key\\=$(npm run binary --prefix ./lambdas/generateFakeEnergyPricing)",
     "lambda:custBill": "echo QueryCustomerBillLambdaS3Key\\=$(npm run binary --prefix ./lambdas/customerBillApi)",
     "lambda:ddbStreams": "echo DynamoDbStreamHandlerLambdaS3Key\\=$(npm run binary --prefix ./lambdas/dynamoDbStreamHandler)",
+    "lambda:custTrig": "echo CustomerUsageSqsTriggerLambdaS3Key\\=$(npm run binary --prefix ./lambdas/customerUsageSqsTrigger)",
     "s3bucket:artifacts": "echo ArtifactsS3BucketName\\=$npm_config_s3bucket",
-    "cfn:param-overrides": "echo \"$(npm run --silent lambda:genCust) $(npm run --silent lambda:genEnerg) $(npm run --silent lambda:custBill) $(npm run --silent lambda:ddbStreams) $(npm run --silent s3bucket:artifacts)\"",
+    "cfn:param-overrides": "echo \"$(npm run --silent lambda:genCust) $(npm run --silent lambda:genEnerg) $(npm run --silent lambda:custBill) $(npm run --silent lambda:ddbStreams) $(npm run --silent lambda:custTrig) $(npm run --silent s3bucket:artifacts)\"",
     "cfn:pkg": "mkdir -p build && aws cloudformation package  --template-file ./src/cae-test1.cf.json --output-template build/cae-test1.yaml --s3-bucket cae-test1-deployment-artifacts",
     "cfn:dep": "aws cloudformation deploy --region \"$npm_config_region\" --stack-name cae-test1 --parameter-overrides $(npm run --silent cfn:param-overrides) --template-file ./build/cae-test1.yaml --capabilities CAPABILITY_IAM CAPABILITY_AUTO_EXPAND CAPABILITY_NAMED_IAM",
     "cfn:out": "aws cloudformation describe-stacks --stack-name cae-test1 --region \"$npm_config_region\"",
