--- a/lambdas/customerUsageSqsTrigger/package.json
+++ b/lambdas/customerUsageSqsTrigger/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "generatefakecustomerusage",
-  "version": "1.0.27",
-  "description": "Generate fake customer usage data and write it to DynamoDB",
+  "name": "customerusagesqstrigger",
+  "version": "1.0.5",
+  "description": "Triggered when customer usage is added to SQS queue",
   "main": "handler.js",
   "scripts": {
-    "start": "cross-env TESTING=true node -e 'require(\"./src/handler.js\").generateFakeCustomerData()'",
+    "start": "cross-env TESTING=true node -e 'require(\"./test/test.js\").test()'",
     "test": "npm run start",
     "clean": "rimraf dist *.zip",
     "copy": "babel src package.json package-lock.json --out-dir dist --copy-files",
@@ -27,6 +27,7 @@
     "@babel/register": "^7.11.5",
     "aws-sdk": "^2.720.0",
     "cross-env": "^7.0.2",
+    "nodemon": "^2.0.4",
     "rimraf": "^3.0.2"
   },
   "dependencies": {
