Added axios post request for generate fake Customer Usage Data Lambda to Customer Usage API instead of direct calls to DynamoDB Rounded the intervals to the nearest 5 minutes to ensure the energy price overlaps Added a DependsOn to the CustomerUsage Lambda fix where its didn't have the policy attached

--- a/lambdas/generateFakeCustomerUsage/package.json
+++ b/lambdas/generateFakeCustomerUsage/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generatefakecustomerusage",
-  "version": "1.0.27",
+  "version": "1.0.30",
   "description": "Generate fake customer usage data and write it to DynamoDB",
   "main": "handler.js",
   "scripts": {
@@ -30,6 +30,7 @@
     "rimraf": "^3.0.2"
   },
   "dependencies": {
-    "@babel/runtime-corejs3": "^7.11.2"
+    "@babel/runtime-corejs3": "^7.11.2",
+    "axios": "^0.20.0"
   }
 }
